Fix test enable reflective access to java.io.FileSystem